traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while (!posFinale()) {
    	posSuivante()
  }
}


def posFinale() {
  return ((getMondeLargeur() == getX()) && (getY() == getMondeHauteur()))
}

def posSuivante() {
  if (getY() == getMondeHauteur() - 1) {
    	setPos(getX()+1, 0)
  }
  else
  		setPos(getX(), getY() + 1)
}